# flujo-autonomo-repo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RUNBOOK.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-hygiene.yml  markdown-docs.yml  security.yml  workflow-security.yml
actions/: browser_capture.py  browser_form.py  filesystem.py  http_actions.py  notify.py  rules.py  screen.py  system.py  ui.py  vision.py
app/: server.py
configs/: 03_folder_inventory.json  11_screen_tri_mode_operator.json
data/dropbox/inbox/: README.md  nota_operativa.txt
data/inbox/: example.txt
data/seeds/: form_seeds.json
data/web/: control_page.html  form_demo.html
decision/: optional_ai.py  rules.py
docs/: ARQUITECTURA.md  CREAR_FLUJOS.md  EXTENSION.md  FAMILIAS_Y_CASOS.md  INTEGRACIONES.md  MANUAL_USUARIO.md  METRICAS.md  MODOS_DE_ANALISIS_VISUAL.md  OPERACION.md  ROADMAP.md  SEGURIDAD.md  TROUBLESHOOTING.md  VALIDACION.md
engine/: action_registry.py  catalog.py  conditions.py  cron.py  database.py  introspection.py  loader.py  logger.py  manifest_schema.py  metrics.py  models.py  orchestrator.py  paths.py  runner.py  sandbox.py  scheduler.py  secrets.py  state_store.py  template.py
flows/01_screen_capture_analyze/: README.md  context.example.json  manifest.json
flows/02_screen_capture_browser/: README.md  context.example.json
flows/02_screen_watchdog_rules/: README.md  context.example.json  manifest.json
flows/03_folder_inventory/: README.md  context.example.json  manifest.json
flows/04_document_drop_pipeline/: README.md  context.example.json  manifest.json
flows/05_system_healthcheck/: README.md  manifest.json
flows/06_process_watchdog/: README.md  manifest.json
flows/07_browser_assisted_capture/: README.md  context.example.json  manifest.json
flows/07_browser_form_filler/: README.md  context.example.json  manifest.json
flows/08_ui_macro_recovery/: README.md  context.example.json  manifest.json
flows/08_windows_lock_workstation/: README.md  context.example.json  manifest.json
flows/09_branching_document_router/: README.md  context.example.json  manifest.json
flows/09_show_desktop_capture/: README.md  manifest.json
flows/10_explorer_open_path/: .disabled  README.md  context.example.json  manifest.json
flows/10_screen_ocr_click_recovery/: README.md  context.example.json  manifest.json
flows/11_screen_tri_mode_operator/: README.md  context.example.json  manifest.json
flows/11_settings_open_section/: README.md  context.example.json  manifest.json
flows/12_desktop_ocr_inventory/: README.md  manifest.json
flows/12_screen_capture_browser/: README.md  manifest.json
plugins/analyzers/: base.py  metadata_image_analyzer.py  mock_image_analyzer.py  ocr_image_analyzer.py  vision_model_analyzer.py
schemas/: manifest.schema.json
scripts/: smoke_test.py  validate_project.py
tests/: conftest.py  test_action_registry.py  test_actions_basic.py  test_conditions.py  test_cron.py  test_loader.py  test_manifest_schema.py  test_metrics.py  test_orchestrator.py  test_panel_endpoints.py  test_run_locks.py  test_sandbox.py  test_secrets_and_notify.py  test_security_hardening.py  test_template.py
